--- a/encapsulation.ipynb
+++ b/encapsulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,27 +14,32 @@
     "    def __str__(self):\n",
     "        return(f'<{self.x_cod},{self.y_cod}>')\n",
     "    \n",
-    "#user_input = input(\"Enter two coordinates using comma between them: \")\n",
-    "#x,y = map(int,user_input.split(\",\"))\n"
+    "        #user_input = input(\"Enter two coordinates using comma between them: \")\n",
+    "        #x,y = map(int,user_input.split(\",\"))\n",
+    "    def euclidean_distance(self,other):\n",
+    "        return ((self.x_cod - other.x_cod)**2 + (self.y_cod - other.y_cod)**2)*0.5\n",
+    "\n",
+    "     \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<3,4> <0,1>\n"
+      "0.5\n"
      ]
     }
    ],
    "source": [
-    "p1 = Point(3,4)\n",
+    "p1 = Point(1,1)\n",
     "p2 = Point(0,1)\n",
-    "print(p1,p2)"
+    "p1= p1.euclidean_distance(p2)\n",
+    "print(p1)\n"
    ]
   },
   {
