find distance from origin

--- a/encapsulation.ipynb
+++ b/encapsulation.ipynb
@@ -1,8 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Write OOP classes to handle the following scenarios:**\n",
+    "    * A user can create and view 2D coordinates.\n",
+    "    * A user can find out the distance between 2 coordinates.\n",
+    "    * A user can find the distance of coordinates from the origin.\n",
+    "    * A user can check if a point lies on a given line.\n",
+    "    * A user can find the distance between a given 2D point and a given line.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,30 +28,37 @@
     "    \n",
     "        #user_input = input(\"Enter two coordinates using comma between them: \")\n",
     "        #x,y = map(int,user_input.split(\",\"))\n",
+    "\n",
+    "               \n",
     "    def euclidean_distance(self,other):\n",
     "        return ((self.x_cod - other.x_cod)**2 + (self.y_cod - other.y_cod)**2)*0.5\n",
+    "    \n",
     "\n",
-    "     \n"
+    "    def distance_from_origin(self):\n",
+    "        #return self.euclidean_distance(Point(0,0))\n",
+    "        return (self.x_cod**2 + self.y_cod**2)**0.5\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "p1 = Point(1,1)\n",
-    "p2 = Point(0,1)\n",
-    "p1= p1.euclidean_distance(p2)\n",
-    "print(p1)\n"
+    "p1 = Point(0,0)\n",
+    "p2 = Point(10,10)\n",
+    "p1.distance_from_origin()"
    ]
   },
   {
