user can check if a point lies on a given line

--- a/encapsulation.ipynb
+++ b/encapsulation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,62 @@
     "\n",
     "    def distance_from_origin(self):\n",
     "        #return self.euclidean_distance(Point(0,0))\n",
-    "        return (self.x_cod**2 + self.y_cod**2)**0.5\n"
+    "        return (self.x_cod**2 + self.y_cod**2)**0.5\n",
+    "    \n",
+    "\n",
+    "class Line:\n",
+    "    def __init__(self,A,B,C):\n",
+    "        self.A = A\n",
+    "        self.B = B\n",
+    "        self.C = C\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return (f'{self.A}A + {self.B}B + {self.C}C = 0')\n",
+    "    #we will use line instead self\n",
+    "    def point_on_line(line,point):\n",
+    "        if line.A * point.x_cod + line.B*point.y_cod + line.C == 0:\n",
+    "            return \"lies on the line\"\n",
+    "        else:\n",
+    "            return \"does not lieson teh line\"\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1A + 1B + 2C = 0\n",
+      "<1,1>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'does not lieson teh line'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = Line(1,1,2)\n",
+    "p1 = Point(1,1)\n",
+    "print(l1)\n",
+    "print(p1)\n",
+    "l1.point_on_line(p1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +100,7 @@
        "0.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
