adding questions in notebook along with code

--- a/encapsulation.ipynb
+++ b/encapsulation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,13 +53,16 @@
     "            return \"lies on the line\"\n",
     "        else:\n",
     "            return \"does not lieson teh line\"\n",
+    "        \n",
     "\n",
-    "\n"
+    "\n",
+    "    def shortest_distance(line,point):\n",
+    "         return abs(line.A *point.x_cod + line.B* point.y_cod + line.C)/(line.A**2 + line.B**2)**0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -73,10 +76,10 @@
     {
      "data": {
       "text/plain": [
-       "'does not lieson teh line'"
+       "2.82842712474619"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,12 +89,14 @@
     "p1 = Point(1,1)\n",
     "print(l1)\n",
     "print(p1)\n",
-    "l1.point_on_line(p1)"
+    "#li is automatically passsed as input\n",
+    "# we can pass object into the methods\n",
+    "l1.shortest_distance(p1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +105,7 @@
        "0.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
