--- a/encapsulation.ipynb
+++ b/encapsulation.ipynb
@@ -117,6 +117,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " **How Object acces attributes**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "\n",
+    "    def __init__(self,name_input, country_input):\n",
+    "        self.name = name_input\n",
+    "        self.country = country_input\n",
+    "\n",
+    "    def greet(self):\n",
+    "        if self.country == \"Pakistan\":\n",
+    "            print (\"AOA\", self.name)\n",
+    "        else:\n",
+    "            print(\"Hello\", self.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pakistan'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Person(\"shafaat\",\"Pakistan\")\n",
+    "#accessing attributes\n",
+    "#w we can create"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
