--- a/encapsulation.ipynb
+++ b/encapsulation.ipynb
@@ -144,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Pakistan'"
+       "'male'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,12 @@
    "source": [
     "p = Person(\"shafaat\",\"Pakistan\")\n",
     "#accessing attributes\n",
-    "#w we can create"
+    "p.name\n",
+    "p.country\n",
+    "\n",
+    "#we can aslo create attributes outside teh class , this attributes will automaticaaaly add in the class attributes\n",
+    "p.gender = \"male\"\n",
+    "p.gender"
    ]
   },
   {
