using multiple reference variables for one object

--- a/encapsulation.ipynb
+++ b/encapsulation.ipynb
@@ -170,6 +170,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Reference Variable**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shafaat\n",
+      "shafaat\n",
+      "Mehar\n",
+      "Mehar\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self):\n",
+    "        self.name = \"shafaat\"\n",
+    "        self.gender = \"male\"\n",
+    "\n",
+    "\n",
+    "p = Person()\n",
+    "q = p\n",
+    "print(p.name)\n",
+    "print(q.name)\n",
+    "q.name = \"Mehar\"\n",
+    "print(q.name)\n",
+    "print(p.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2632124429648\n",
+      "2632124429648\n"
+     ]
+    }
+   ],
+   "source": [
+    "#will be the same\n",
+    "print(id(p))\n",
+    "print(id(q))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mehar\n",
+      "Mehar\n",
+      "Mehar\n",
+      "Mehar\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p.name)\n",
+    "print(q.name)\n",
+    "q.name = \"Mehar\"\n",
+    "print(q.name)\n",
+    "print(p.name)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
