using collection of objects in list/ dictionaries

--- a/encapsulation.ipynb
+++ b/encapsulation.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **Write OOP classes to handle the following scenarios:**\n",
-    "    * A user can create and view 2D coordinates.\n",
-    "    * A user can find out the distance between 2 coordinates.\n",
-    "    * A user can find the distance of coordinates from the origin.\n",
-    "    * A user can check if a point lies on a given line.\n",
-    "    * A user can find the distance between a given 2D point and a given line.\n"
+    "- **Write OOP classes to handle the following scenarios:**\n",
+    "  - A user can create and view 2D coordinates.\n",
+    "  - A user can find out the distance between 2 coordinates.\n",
+    "  - A user can find the distance of coordinates from the origin.\n",
+    "  - A user can check if a point lies on a given line.\n",
+    "  - A user can find the distance between a given 2D point and a given line.\n"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " **How Object acces attributes**"
+    "**How Object acces attributes**\n"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Reference Variable**"
+    "**Reference Variable**\n"
    ]
   },
   {
@@ -250,6 +250,88 @@
     "q.name = \"Mehar\"\n",
     "print(q.name)\n",
     "print(p.name)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**pass by reference**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi my name is  shafaat and i am a  male\n",
+      "Hi my name is  shafaat and i am a  male\n",
+      "ankhit\n",
+      "male\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self,name,gender):\n",
+    "        self.name = name\n",
+    "        self.gender = gender\n",
+    "\n",
+    "def greet(person):\n",
+    "    print(\"Hi my name is \", person.name, \"and i am a \", person.gender)\n",
+    "    p1 = Person(\"ankhit\",\"male\")\n",
+    "    return p1\n",
+    "p = Person(\"shafaat\",\"male\")\n",
+    "greet(p)\n",
+    "x = greet(p)\n",
+    "print(x.name)\n",
+    "print(x.gender)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**collection of objects**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<__main__.Person object at 0x00000264D6E52D50>, <__main__.Person object at 0x00000264D67DBA10>, <__main__.Person object at 0x00000264D6E50F10>]\n",
+      "shafaat male\n",
+      "ibad male\n",
+      "saad male\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "\n",
+    "    def __init__(self, name, gender):\n",
+    "        self.name = name\n",
+    "        self.gender = gender\n",
+    "\n",
+    "p1 = Person(\"shafaat\",\"male\")\n",
+    "p2 = Person(\"ibad\",\"male\")\n",
+    "p3 = Person(\"saad\",\"male\")\n",
+    "#storing collection of objects in list etc\n",
+    "#[p1,p2,p3]\n",
+    "L = [p1, p2 ,p3]\n",
+    "print(L)\n",
+    "#now we can do everything with list as jenerall\n",
+    "for i in L:\n",
+    "   print(i.name,i.gender)"
    ]
   },
   {
