--- a/encapsulation.ipynb
+++ b/encapsulation.ipynb
@@ -335,11 +335,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Static variable (vs instance variable)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# need for static variable\n",
+    "# class variable\n"
+   ]
   }
  ],
  "metadata": {
