simple example of inheritance

--- a/inhertance&polymarphsm.ipynb
+++ b/inhertance&polymarphsm.ipynb
@@ -75,7 +75,50 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Inheritance**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SHafaat\n",
+      "login\n",
+      "enroll into course\n"
+     ]
+    }
+   ],
+   "source": [
+    "class User:\n",
+    "    def __init__(self):\n",
+    "        self.name = \"SHafaat\"\n",
+    "\n",
+    "    def login(self):\n",
+    "        print(\"login\")\n",
+    "\n",
+    "class Student(User):\n",
+    "    \n",
+    "    #def __init__ (self):\n",
+    "       # self.rollno = 100\n",
+    "\n",
+    "    def enroll(self):\n",
+    "        print(\"enroll into course\")\n",
+    "\n",
+    "\n",
+    "u = User()\n",
+    "s = Student()\n",
+    "\n",
+    "print(s.name)\n",
+    "#print(s.rollno)\n",
+    "s.login()\n",
+    "s.enroll()"
+   ]
   },
   {
    "cell_type": "code",
