calling child clas constructor just

--- a/inhertance&polymarphsm.ipynb
+++ b/inhertance&polymarphsm.ipynb
@@ -122,10 +122,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buying a SmartPhone\n"
+     ]
+    }
+   ],
+   "source": [
+    "#constructor example\n",
+    "\n",
+    "class Phone:\n",
+    "    def __init__(self,price,brand,camera):\n",
+    "        print(\"inside phone constructor\")\n",
+    "        self.price = price\n",
+    "        self.brand = brand\n",
+    "        self.camera = camera\n",
+    "\n",
+    "class SmartPhone(Phone):\n",
+    "    def __init__(self, os, ram):\n",
+    "        self.os = os\n",
+    "        self.ram = ram\n",
+    "        print(\"Buying a SmartPhone\")\n",
+    "s = SmartPhone(\"Apple\", 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "."
+   ]
   }
  ],
  "metadata": {
