--- a/inhertance&polymarphsm.ipynb
+++ b/inhertance&polymarphsm.ipynb
@@ -153,12 +153,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside phone consructor\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'SmartPhone' object has no attribute '_SmartPhone__price'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__price)\n\u001b[0;32m     16\u001b[0m s \u001b[38;5;241m=\u001b[39m SmartPhone(\u001b[38;5;241m200000\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mApple\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m13\u001b[39m)\n\u001b[1;32m---> 17\u001b[0m \u001b[43ms\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[23], line 14\u001b[0m, in \u001b[0;36mSmartPhone.check\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__price\u001b[49m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'SmartPhone' object has no attribute '_SmartPhone__price'"
+     ]
+    }
+   ],
+   "source": [
+    "#child cant access private members of the class\n",
+    "class Phone:\n",
+    "    def __init__(self, price, brand, camera):\n",
+    "        print(\"inside phone consructor\")\n",
+    "        self.__price = price\n",
+    "        self.brand = brand\n",
+    "        self.camera = camera\n",
+    "\n",
+    "    def show(self):\n",
+    "        print(self.__price)\n",
+    "\n",
+    "class SmartPhone(Phone):\n",
+    "    def check(self):\n",
+    "        print(self.__price)\n",
+    "\n",
+    "s = SmartPhone(200000, \"Apple\",13)\n",
+    "s.check()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*opereator overloading*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "GeeksFor\n",
+      "3\n",
+      "GeeksFor\n",
+      "3\n",
+      "GeeksFor\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self, a):\n",
+    "        self.a = a\n",
+    "\n",
+    "    # adding two objects \n",
+    "    def __add__(self, o):\n",
+    "        return self.a + o.a \n",
+    "ob1 = A(1)\n",
+    "ob2 = A(2)\n",
+    "ob3 = A(\"Geeks\")\n",
+    "ob4 = A(\"For\")\n",
+    "\n",
+    "print(ob1 + ob2)\n",
+    "print(ob3 + ob4)\n",
+    "# Actual working when Binary Operator is used.\n",
+    "print(A.__add__(ob1 , ob2)) \n",
+    "print(A.__add__(ob3,ob4)) \n",
+    "#And can also be Understand as :\n",
+    "print(ob1.__add__(ob2))\n",
+    "print(ob3.__add__(ob4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "."
-   ]
+   "source": []
   }
  ],
  "metadata": {
