understanding abstraction/abstarct class

--- a/inhertance&polymarphsm.ipynb
+++ b/inhertance&polymarphsm.ipynb
@@ -245,6 +245,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Abstraction**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "class BankApp(ABC):\n",
+    "\n",
+    "    def database(self):\n",
+    "        print(\"connected to data base\")\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def security(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MobileApp(BankApp):\n",
+    "    def mobile_login(self):\n",
+    "        print(\"login into mobile\")\n",
+    "\n",
+    "    def security(self):\n",
+    "        print(\"mobile security\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "connected to data base\n"
+     ]
+    }
+   ],
+   "source": [
+    "mob = MobileApp()\n",
+    "mob.database()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
