adding remaing codes

--- a/inhertance&polymarphsm.ipynb
+++ b/inhertance&polymarphsm.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Aggregation(Has-A rrelationship)**"
+    "**Aggregation(Has-A rrelationship)**\n"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Aggreagation class diagram**"
+    "**Aggreagation class diagram**\n"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Inheritance**"
+    "**Inheritance**\n"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*opereator overloading*"
+    "_opereator overloading_\n"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Abstraction**"
+    "**Abstraction**\n"
    ]
   },
   {
