--- a/exception_handling.ipynb
+++ b/exception_handling.ipynb
@@ -41,6 +41,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pyhton is raised by pyhton runitme"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
