--- a/exception_handling.ipynb
+++ b/exception_handling.ipynb
@@ -79,6 +79,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "# catching specific exception\n",
+    "try:\n",
+    "  m=5\n",
+    "  f = open('sample1.txt','r')\n",
+    "  print(f.read())\n",
+    "  print(m)\n",
+    "  print(5/2)\n",
+    "  L = [1,2,3]\n",
+    "  L[100]\n",
+    "except FileNotFoundError:\n",
+    "  print('file not found')\n",
+    "except NameError:\n",
+    "  print('variable not defined')\n",
+    "except ZeroDivisionError:\n",
+    "  print(\"can't divide by 0\")\n",
+    "except Exception as e:\n",
+    "  print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
