finaaly &raise&else

--- a/exception_handling.ipynb
+++ b/exception_handling.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "# finally\n",
+    "# finally willll print in every situation \n",
     "# else\n",
     "try:\n",
     "  f = open('sample1.txt','r')\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
